--- a/students/locale/uk/LC_MESSAGES/django.po
+++ b/students/locale/uk/LC_MESSAGES/django.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-10-19 14:34+0000\n"
+"POT-Creation-Date: 2016-10-25 10:04+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -20,15 +20,114 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
+#: apps.py:8
+msgid "Students Base"
+msgstr "База Студентів"
+
+#: models/exams.py:11
+msgid "Subject"
+msgstr "Предмет"
+
+#: models/exams.py:14
+msgid "Date and Time of Exam"
+msgstr "Дата і Час проведення Іспиту"
+
+#: models/exams.py:18 templates/students/exams_list.html:31
+msgid "Teacher's Name"
+msgstr "Ім'я Викладача"
+
+#: models/exams.py:21 models/groups.py:8 models/students.py:36
+#: templates/students/exams_list.html:36 views/groups.py:63 views/groups.py:94
+msgid "Group"
+msgstr "Група"
+
+#: models/exams.py:25 views/exams.py:62 views/exams.py:92
+msgid "Exam"
+msgstr "Іспит"
+
+#: models/exams.py:26 templates/students/base.html:50
+#: templates/students/exams_list.html:4 templates/students/exams_list.html:5
+msgid "Exams"
+msgstr "Іспити"
+
+#: models/groups.py:9 templates/students/base.html:49
+#: templates/students/groups_list.html:4
+msgid "Groups"
+msgstr "Групи"
+
+#: models/groups.py:13 templates/students/groups_list.html:21
+msgid "Group Name"
+msgstr "Назва Групи"
+
+#: models/groups.py:15 templates/students/groups_list.html:22
+msgid "Group Leader"
+msgstr "Староста Групи"
+
+#: models/groups.py:21 models/students.py:42
+#: templates/students/students_add.html:71
+msgid "Additional Notes"
+msgstr "Додаткові Нотатки"
+
+#: models/monthjournal.py:8
+msgid "Monthly Journal"
+msgstr "Місячний Журнал Відвідування"
+
+#: models/monthjournal.py:9
+msgid "Monthly Journals"
+msgstr "Місячні Журнали Відвідування"
+
+#: models/monthjournal.py:11 models/students.py:8
+#: templates/students/journal.html:26 views/students.py:83 views/students.py:90
+msgid "Student"
+msgstr "Студент"
+
+#: models/monthjournal.py:16
+msgid "Date"
+msgstr "Дата"
+
+#: models/monthjournal.py:21
+msgid "Day #"
+msgstr "День №"
+
+#: models/students.py:9 templates/students/base.html:47
+#: templates/students/students_list.html:4
+msgid "Students"
+msgstr "Студенти"
+
+#: models/students.py:13 templates/students/students_list.html:26
+msgid "First Name"
+msgstr "Ім'я"
+
+#: models/students.py:17 templates/students/students_list.html:21
+msgid "Last Name"
+msgstr "Прізвище"
+
+#: models/students.py:21 templates/students/students_add.html:31
+msgid "Middle Name"
+msgstr "По-батькові"
+
+#: models/students.py:25
+msgid "Date of Birth"
+msgstr "Дата Народження"
+
+#: models/students.py:29 templates/students/students_add.html:45
+#: templates/students/students_list.html:19
+msgid "Photo"
+msgstr "Фото"
+
+#: models/students.py:34
+msgid "Ticket"
+msgstr "Білет"
+
 #: templates/contact_admin/form.html:5 templates/contact_admin/form.html:6
-msgid "Connext with Administrator"
+msgid "Connect with Administrator"
 msgstr "Зв'язок із Адміністратором"
 
 #: templates/contact_admin/form.html:10 templates/students/exams_edit.html:9
-#: templates/students/groups_edit.html:9
+#: templates/students/groups_edit.html:9 templates/students/students_add.html:9
 #: templates/students/students_edit.html:9
 msgid "Please fix the following mistakes"
-msgstr "Будь ласка, виправте наступні помилки:"
+msgstr "Будь ласка, виправте наступні помилки"
 
 #: templates/students/base.html:9 templates/students/base.html:27
 #: templates/students/base.html:75
@@ -37,29 +136,16 @@ msgstr "Сервіс Обліку Студентів"
 
 #: templates/students/base.html:31
 msgid "Group:"
-msgstr "Група:"
+msgstr "Група"
 
 #: templates/students/base.html:33
 msgid "All Students"
 msgstr "Всі Студенти"
 
-#: templates/students/base.html:47 templates/students/students_list.html:4
-msgid "Students"
-msgstr "Студенти"
-
 #: templates/students/base.html:48 templates/students/journal.html:4
 #: templates/students/journal.html:5 templates/students/students_list.html:64
 msgid "Journal"
 msgstr "Відвідування"
-
-#: templates/students/base.html:49 templates/students/groups_list.html:4
-msgid "Groups"
-msgstr "Групи"
-
-#: templates/students/base.html:50 templates/students/exams_list.html:4
-#: templates/students/exams_list.html:5
-msgid "Exams"
-msgstr "Іспити"
 
 #: templates/students/base.html:51
 msgid "Contact"
@@ -90,7 +176,7 @@ msgstr "Ні"
 #: templates/students/exams_edit.html:5 templates/students/exams_edit.html:6
 #: templates/students/exams_list.html:7
 msgid "Add Exam"
-msgstr "Додати Іспит"
+msgstr "Додти Іспит"
 
 #: templates/students/exams_edit.html:5 templates/students/exams_edit.html:6
 msgid "Edit Exam"
@@ -102,15 +188,7 @@ msgstr "Назва Предмета"
 
 #: templates/students/exams_list.html:26
 msgid "Date and Time"
-msgstr "Дата і час проведення"
-
-#: templates/students/exams_list.html:31
-msgid "Teacher's Name"
-msgstr "Ім'я викладача"
-
-#: templates/students/exams_list.html:36
-msgid "Group"
-msgstr "Група-учасник"
+msgstr "Дата і Час проведення"
 
 #: templates/students/exams_list.html:40 templates/students/groups_list.html:23
 #: templates/students/students_list.html:35
@@ -123,7 +201,7 @@ msgid "Action"
 msgstr "Дія"
 
 #: templates/students/exams_list.html:64 templates/students/groups_list.html:45
-#: templates/students/journal.html:48 templates/students/students_list.html:63
+#: templates/students/journal.html:47 templates/students/students_list.html:63
 msgid "Edit"
 msgstr "Редагувати"
 
@@ -134,7 +212,7 @@ msgstr "Видалити"
 
 #: templates/students/exams_list.html:75
 msgid "There are no exams in the base yet."
-msgstr "Поки що немає іспитів у базі."
+msgstr "Поки що немає іспитів у базі даних"
 
 #: templates/students/groups_confirm_delete.html:4
 #: templates/students/groups_confirm_delete.html:5
@@ -159,25 +237,17 @@ msgstr "Редагувати Групу"
 msgid "List Of Students Groups"
 msgstr "Список Груп Студентів"
 
-#: templates/students/groups_list.html:21
-msgid "Group Name"
-msgstr "Назва Групи"
-
-#: templates/students/groups_list.html:22
-msgid "Group Leader"
-msgstr "Староста"
-
 #: templates/students/groups_list.html:37
 msgid "Nothing"
 msgstr "Немає"
 
 #: templates/students/groups_list.html:56
 msgid "There are no groups in the base yet"
-msgstr "Поки що немає груп у базі"
+msgstr "Поки що немає груп у базі даних"
 
 #: templates/students/journal.html:9
 msgid "There is no students in the base. Please"
-msgstr "Поки що немає студентів у базі. Будь ласка,"
+msgstr "Поки що немає студентів у базі даних. Будь ласка,"
 
 #: templates/students/journal.html:9
 msgid "add"
@@ -191,11 +261,12 @@ msgstr "першого"
 msgid ""
 "We automatically save changes into journal while you click inside table "
 "cells."
-msgstr "Зміни автоматично зберігаються при кліку на клітинці."
+msgstr ""
+"Ми автоматично зберігаємо зміни в журнал при кліку на клітинці таблиці."
 
 #: templates/students/journal.html:14
 msgid "Saving..."
-msgstr "Йде зереження..."
+msgstr "Йде збереження..."
 
 #: templates/students/journal.html:17
 msgid "Previous Month"
@@ -205,10 +276,6 @@ msgstr "Попередній Місяць"
 msgid "Next Month"
 msgstr "Наступний Місяць"
 
-#: templates/students/journal.html:26
-msgid "Student"
-msgstr "Студент"
-
 #: templates/students/students_add.html:4
 #: templates/students/students_add.html:5
 #: templates/students/students_edit.html:5
@@ -217,54 +284,41 @@ msgstr "Студент"
 msgid "Add Student"
 msgstr "Додати Студента"
 
-#: templates/students/students_add.html:9
-msgid "Please fix the following messages"
-msgstr "Будь ласка, виправте наступні помилки:"
-
 #: templates/students/students_add.html:17
 msgid "First Name*"
-msgstr "Ім'я*"
+msgstr "Ім'я"
 
 #: templates/students/students_add.html:19
 msgid "Input your first name"
-msgstr "Вкажіть ваше ім'я"
+msgstr "Введіть Ваше Ім'я"
 
 #: templates/students/students_add.html:24
-msgid "Second Name*"
-msgstr "Прізвище*"
+msgid "Last Name*"
+msgstr "Прізвище"
 
 #: templates/students/students_add.html:26
-msgid "Input your second name"
-msgstr "Вкажіть ваше прізвище"
-
-#: templates/students/students_add.html:31
-msgid "Middle Name"
-msgstr "По-батькові"
+msgid "Input your last name"
+msgstr "Введіть Ваше Прізвище"
 
 #: templates/students/students_add.html:33
 msgid "Input your middle name"
-msgstr "Вкажіть ваше ім'я по-батькові"
+msgstr "Введіть ваше Ім'я по-батькові"
 
 #: templates/students/students_add.html:38
 msgid "Date of Birth*"
-msgstr "Дата народження*"
+msgstr "Дата Народження*"
 
 #: templates/students/students_add.html:40
 msgid "E.g. 1984-12-30"
 msgstr "Напр. 1984-12-30"
 
-#: templates/students/students_add.html:45
-#: templates/students/students_list.html:19
-msgid "Photo"
-msgstr "Фото"
-
 #: templates/students/students_add.html:52
 msgid "Student's Ticket*"
-msgstr "№ Студентського квитка*"
+msgstr "Номер Студентського Квитка"
 
 #: templates/students/students_add.html:54
 msgid "Input your Ticket #"
-msgstr "Вкажіть № Студентського квитка"
+msgstr "Введіть Ваш Номер Студентського Квитка"
 
 #: templates/students/students_add.html:59
 msgid "Group*"
@@ -274,13 +328,9 @@ msgstr "Група*"
 msgid "Select a Group"
 msgstr "Виберіть Групу"
 
-#: templates/students/students_add.html:71
-msgid "Additional Notes"
-msgstr "Додаткові нотатки"
-
 #: templates/students/students_add.html:73
 msgid "Something else?"
-msgstr "Є, що додати?"
+msgstr "Маєте, що додати?"
 
 #: templates/students/students_add.html:80
 msgid "Add"
@@ -307,16 +357,68 @@ msgstr "Редагувати Студента"
 
 #: templates/students/students_list.html:5
 msgid "Students List"
-msgstr "База Студентів"
-
-#: templates/students/students_list.html:21
-msgid "Last Name"
-msgstr "Прізвище"
-
-#: templates/students/students_list.html:26
-msgid "First Name"
-msgstr "Ім'я"
+msgstr "Список Студентів"
 
 #: templates/students/students_list.html:31
 msgid "Ticket #"
-msgstr "№ Квитка"
+msgstr "Білет №"
+
+#: views/contact_admin.py:27
+msgid "Send"
+msgstr "Відправити"
+
+#: views/contact_admin.py:29
+msgid "Your Email Address"
+msgstr "Ваша Email Адреса"
+
+#: views/contact_admin.py:31
+msgid "Message title"
+msgstr "Заголовок Повідомлення"
+
+#: views/contact_admin.py:34
+msgid "Message text"
+msgstr "Текст Повідомлення"
+
+#: views/contact_admin.py:49
+msgid "The message was not sent."
+msgstr "Повідомлення не було відправлено."
+
+#: views/contact_admin.py:53
+msgid "The message was sent successfully."
+msgstr "Повідомлення було відправлено успішно."
+
+#: views/exams.py:53 views/exams.py:83 views/groups.py:54 views/groups.py:85
+msgid "Save"
+msgstr "Зберегти"
+
+#: views/exams.py:62 views/groups.py:63 views/students.py:83
+msgid "was added successfully!"
+msgstr "успішно додано!"
+
+#: views/exams.py:92 views/groups.py:94 views/students.py:90
+msgid "was edited successfully!"
+msgstr "успішно редаговано!"
+
+#: views/exams.py:95
+msgid "Exam editing was canceled!"
+msgstr "Редагування Іспиту було відмінено!"
+
+#: views/exams.py:103
+msgid "Exam was deleted successfully!"
+msgstr "Іспит було успішно видалено!"
+
+#: views/groups.py:97
+msgid "Group editing was canceled!"
+msgstr "Редагування Групи було відмінено!"
+
+#: views/groups.py:104
+msgid "was deleted successfully!"
+msgstr "було видалено успішно!"
+
+#: views/students.py:93
+msgid "Student editing canceled!"
+msgstr "Редагування Студента було відмінено!"
+
+#: views/students.py:102
+msgid "Student was deleted successfully!"
+msgstr "Студента було успішно видалено!"
